# stock-exchange-engine

./: .env  .gitignore  CMakeLists.txt  CRITICAL_FIXES.md  CRITICAL_FIXES_2025-10-20.md  FIXES_SUMMARY.md  GRACEFUL_SHUTDOWN_FIX.md  OPTIMIZATIONS_README.md  PRIORITY_1_FIXES_COMPLETED.md  PRIORITY_2_FIXES_COMPLETED.md  PRODUCTION_READINESS_AUDIT.md  README.md  README_API_ENGINE.md  README_CORE_ENGINE.md  SECURITY_FIX_TLS_ENCRYPTION.md  SERVER_CRASH_PROTECTION.md  SETUP_PERFORMANCE.md  SSL_TLS_IMPLEMENTATION.md  TLS_CLIENT_FIX.md  add_liocense.py  live.py  migrate_database_schema.sql  performance.txt  performance_comparison.py  run_engine.sh  start_databases.sh  test_auth.py  test_client.py  test_two_mode_system.sh  vcpkg.json
readme/: DATABASE_SETUP.md  TEST_STATUS.md  TWO_MODE_SYSTEM_IMPLEMENTATION.md
scripts/: generate_ssl_certs.sh  run_engine.sh  setup_sec_compliance_schema.sql  start_databases.sh  test_engine.sh  test_persistence.py
src/: main.cpp
src/api/: AuthenticationManager.cpp  AuthenticationManager.h  GRPCServer.cpp  GRPCServer.h  SharedMemoryQueue.cpp  SharedMemoryQueue.h  StockService.proto  TCPServer.cpp  TCPServer.h
src/common/: EngineConfig.cpp  EngineConfig.h  EngineLogging.h  EngineTelemetry.cpp  EngineTelemetry.h
src/core_engine/: AdaptiveLoadManager.h  CPUAffinity.h  DatabaseManager.cpp  DatabaseManager.h  LockFreeQueue.h  MemoryPool.h  Stock.cpp  Stock.h  StockExchange.cpp  StockExchange.h
stocktest/: go.mod  go.sum  stress_client.go  test.go
stocktest/pb/: StockService.pb.go  StockService_grpc.pb.go
stocktest/stress_client/: README.md  go.mod  stress_client.go  stress_client_main.go
stocktest/stress_client/pb/: StockService.pb.go  StockService_grpc.pb.go
tests/: README_TESTING.md  test_engine.cpp  test_queue_fix.cpp
